# news-automation

./: .env.example  .gitignore  ADVANCED_ANALYSIS_SYSTEM.md  AGE_GROUPS_GUIDE.md  API_KEYS_GUIDE.md  ARCHITECTURE.md  CONTEXT_AWARE_OVERLAYS_IMPLEMENTATION.md  ENGAGEMENT_EXAMPLES.md  ENGAGEMENT_PROMPTS_COMPARISON.md  ENGAGING_CONTENT_SUGGESTIONS.md  ENHANCEMENTS.md  EXTENDED_VIDEOS.md  EXTENDED_VIDEO_STYLE_FIX.md  FIXES.md  HOOK_HEADLINES_IMPLEMENTATION.md  IMPROVEMENTS_ROADMAP.md  IMPROVEMENTS_SUMMARY.md  INDIAN_VOICE_SETUP.md  MUST_KNOW_FORMAT.md  NEWS_CATEGORIZATION.md  OPENING_IMAGE_BRANDING.md  QUICK_START_MUST_KNOW.md  README.md  RSS_FEEDS_SETUP.md  SOCIAL_MEDIA_FORMAT_GUIDE.md  TONE_TRANSFORMATION_EXAMPLES.md  TTS_IMPROVEMENTS.md  VIDEO_IMPROVEMENTS.md  VISUAL_ENGAGEMENT_PROPOSAL.md  YOUTUBE_SETUP.md  afternoon.py  compat_fix.py  config.py  content_generator.py  extended_video_generator.py  extract_script_from_video.py  find_indian_voices.py  get_tsunami_script.py  image_generator.py  list_elevenlabs_voices.py  (+25 more)
src/news_automation/: __init__.py  __main__.py  cli.py
src/news_automation/adapters/: __init__.py  content.py  image.py  news.py  tts.py  upload.py  video.py
src/news_automation/application/: __init__.py  pipeline.py
src/news_automation/domain/: __init__.py  models.py
src/news_automation/ports/: __init__.py  interfaces.py
